--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "brick/event": "^0.1.1",
         "envms/fluentpdo": "^2.2.0",
-        "phpunit/phpunit": "^9.3.0."
+        "phpunit/phpunit": "^9.3.0.",
+        "psr/event-dispatcher": "^1.0"
     }
 }
